# gcovgo

./: .gitignore  .goreleaser.yaml  README.md  README_CN.md  go.mod  go.sum  goreleaser.dockerfile
.github/workflows/: release.yaml
cmd/gcovgo/: main.go
internal/commands/gcovgo/: dump.go  root.go  version.go
pkg/commands/gcovgo/: dump.go  root.go  version.go
pkg/gcov/: context.go  gcov.go  parse.go
pkg/gcov/cfg/: cfg.go
pkg/gcov/raw/: data.go  magic.go  magic_test.go  note.go  raw.go  record_arcs.go  record_blocks.go  record_counter.go  record_function.go  record_lines.go  record_program_summary.go  records.go  utils.go  version.go  version_test.go
samples/gcov-data/: .gitattributes  gen-gcov-data.sh
samples/gcov-data/gcc_10/human_readable/: lib1_1.c.gcov
samples/gcov-data/gcc_13/human_readable/: branches.c.gcov
samples/gcov-data/gcc_4/human_readable/: branches.c.gcov  lib1_1.c.gcov  main.c.gcov
samples/gcov-data/gcc_5/human_readable/: branches.c.gcov  lib1_1.c.gcov
samples/gcov-data/gcc_6/human_readable/: main.c.gcov
samples/gcov-data/gcc_7/human_readable/: branches.c.gcov
samples/gcov-data/gcc_8/human_readable/: branches.c.gcov
samples/gcov-data/gcc_9/human_readable/: lib1_2.c.gcov  (+1 more)
samples/gcovdata/: data.go  gen-gcov-data.sh
samples/hello/: .gitattributes  .gitignore  CMakeLists.txt  cmake-3.26.6-linux-x86_64.sh
samples/hello/src/: main.c
samples/hello/src/branches/: branches.c  branches.h
samples/hello/src/path/to/lib1/: lib1.h  lib1_1.c  lib1_2.c
tests/dumpraw/: dump_raw_test.go
tests/resolvecov/: resolve_coverage_test.go
(+4 files in other folders)
